--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3 class="typing">Frontend Developer</h3>
             <p class="reveal" style="--delay:.34s">
                 My name is Watcharapol Mattayatsuk (Auy), a Front-End web developer with a degree in Electrical
-                Engineering from Kasetsart University, KU CSC. I am passionate about building clean, responsive, and
+                Engineering from Kasetsart University, KU CSC. <br>I am passionate about building clean, responsive, and
                 user-friendly websites that solve real-world problems.
             </p>
 
@@ -51,10 +51,8 @@
         </div>
 
         <div class="hero-image reveal-right" style="--delay:.30s">
-            <div class="hero-lottie">
                 <dotlottie-wc src="https://lottie.host/262b5295-044a-41bc-beef-775da248c08f/A8k4eBKAf5.lottie"
                     speed="1" autoplay loop></dotlottie-wc>
-            </div>
         </div>
     </section>
 
