--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <nav class="navbar">
             <div class="logo">AuyDev</div>
             <ul class="nav-links">
-                <li class="reveal" style="--delay:.15s"><a href="#home" class="active">Home</a></li>
-                <li class="reveal" style="--delay:.2s"><a href="#about">About</a></li>
-                <li class="reveal" style="--delay:.25s"><a href="#projects">Portfolio</a></li>
-                <li class="reveal" style="--delay:.3s"><a href="#contact">Contact</a></li>
+                <li class="reveal" style="--delay:.15s"><a href="#home" class="active"><span class="gradient-text">Home</span></a></li>
+                <li class="reveal" style="--delay:.2s"><a href="#about"><span class="gradient-text">About</span></a></li>
+                <li class="reveal" style="--delay:.25s"><a href="#projects"><span class="gradient-text">Portfolio</span></a></li>
+                <li class="reveal" style="--delay:.3s"><a href="#contact"><span class="gradient-text">Contact</span></a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h2 class="small-title reveal" style="--delay:.15s">AuyDev</h2>
+            <h2 class="small-title reveal" style="--delay:.15s"><span class="gradient-text">AuyDev</span></h2>
             <h1 class="reveal" style="--delay:.22s"><span class="gradient-text">Frontend</span> Developer</h1>
 
             <h3 class="typing">Frontend Developer</h3>
@@ -38,10 +38,10 @@
             </p>
 
             <div class="skills">
-                <span class="reveal" style="--delay:.40s">React</span>
+                <span class="reveal" style="--delay:.40s">HTML</span>
                 <span class="reveal" style="--delay:.44s">JavaScript</span>
-                <span class="reveal" style="--delay:.48s">Node.js</span>
-                <span class="reveal" style="--delay:.52s">Tailwind</span>
+                <span class="reveal" style="--delay:.48s">CSS</span>
+                <span class="reveal" style="--delay:.52s">PYTHON</span>
             </div>
 
             <div class="buttons">
@@ -57,17 +57,18 @@
     </section>
 
     <section id="about" class="section">
-        <h2>About</h2>
+        <h2><span class="gradient-text">About</span></h2>
+        <h1 class="reveal" style="--delay:.22s"><span class="gradient-text">Hello,I'm</span> <br>Watcharapol Mattayatsuk</h1>
         <p class="muted">ใส่รายละเอียดการศึกษา ประสบการณ์ และทักษะเพิ่มเติมของอุ้ยที่นี่…</p>
     </section>
 
     <section id="projects" class="section">
-        <h2>Portfolio</h2>
+        <h2><span class="gradient-text">Portfolio></span></h2>
         <p class="muted">ลิสต์โปรเจกต์ของอุ้ย พร้อมลิงก์ Live/Code</p>
     </section>
 
     <section id="contact" class="section">
-        <h2>Contact</h2>
+        <h2><span class="gradient-text">Contact</span></h2>
         <p class="muted">อีเมล: you@example.com · LinkedIn/GitHub</p>
     </section>
 
