--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Watcharapol Front-End Web Developer</title>
 
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="index.css" />
     <script src="script.js" defer></script>
 </head>
@@ -17,10 +17,14 @@
         <nav class="navbar">
             <div class="logo">AuyDev</div>
             <ul class="nav-links">
-                <li class="reveal" style="--delay:.15s"><a href="#home" class="active"><span class="gradient-text">Home</span></a></li>
-                <li class="reveal" style="--delay:.2s"><a href="#about"><span class="gradient-text">About</span></a></li>
-                <li class="reveal" style="--delay:.25s"><a href="#projects"><span class="gradient-text">Portfolio</span></a></li>
-                <li class="reveal" style="--delay:.3s"><a href="#contact"><span class="gradient-text">Contact</span></a></li>
+                <li class="reveal" style="--delay:.15s"><a href="#home" class="active"><span
+                            class="gradient-text">Home</span></a></li>
+                <li class="reveal" style="--delay:.2s"><a href="#about"><span class="gradient-text">About</span></a>
+                </li>
+                <li class="reveal" style="--delay:.25s"><a href="#projects"><span
+                            class="gradient-text">Portfolio</span></a></li>
+                <li class="reveal" style="--delay:.3s"><a href="#contact"><span class="gradient-text">Contact</span></a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -32,9 +36,10 @@
 
             <h3 class="typing">Frontend Developer</h3>
             <p class="reveal" style="--delay:.34s">
-                My name is Watcharapol Mattayatsuk (Auy), a Front-End web developer with a degree in Electrical
-                Engineering from Kasetsart University, KU CSC. <br>I am passionate about building clean, responsive, and
-                user-friendly websites that solve real-world problems.
+                I’m <strong>Watcharapol “Auy” Mattayatsuk</strong>, a front-end developer with a degree in Electrical
+                Engineering from
+                <strong>Kasetsart University (KU CSC)</strong>. I build clean, responsive, and accessible websites that
+                solve real-world problems.
             </p>
 
             <div class="skills">
@@ -51,15 +56,57 @@
         </div>
 
         <div class="hero-image reveal-right" style="--delay:.30s">
-                <dotlottie-wc src="https://lottie.host/262b5295-044a-41bc-beef-775da248c08f/A8k4eBKAf5.lottie"
-                    speed="1" autoplay loop></dotlottie-wc>
+            <dotlottie-wc src="https://lottie.host/262b5295-044a-41bc-beef-775da248c08f/A8k4eBKAf5.lottie" speed="1"
+                autoplay loop></dotlottie-wc>
         </div>
     </section>
 
-    <section id="about" class="section">
-        <h2><span class="gradient-text">About</span></h2>
-        <h1 class="reveal" style="--delay:.22s"><span class="gradient-text">Hello,I'm</span> <br>Watcharapol Mattayatsuk</h1>
-        <p class="muted">ใส่รายละเอียดการศึกษา ประสบการณ์ และทักษะเพิ่มเติมของอุ้ยที่นี่…</p>
+    <section class="title-about" id="about">
+        <h1 class ="reveal" style ="--delay:.22s"></h1class><span class="gradient-text">About Me</span></h1>
+    </section>
+
+    <section class="about" id="about">
+        <div class="about-content">
+            <h1 class="reveal" style="--delay:.34s"><span class="gradient-text">Hello,I'm</span> <br>Watcharapol
+                Mattayatsuk</h1>
+            <p class="reveal" style="--delay:.40s">
+                I’m <strong>Auy Watcharapol Mattayatsuk</strong>, a <strong>front-end developer</strong> passionate
+                about the web.
+                For me, code isn’t just pages—it’s about crafting <strong>meaningful experiences</strong> that connect
+                people.
+            </p>
+
+            <p class="reveal" style="--delay:.46s">
+                I work end-to-end: researching needs, designing <strong>intuitive, accessible UIs</strong>, and
+                <strong>collaborating on APIs</strong>. When needed, I also build <strong>efficient, scalable back-end
+                    systems</strong>
+                to ship fast, reliable products.
+            </p>
+
+            <p class="reveal" style="--delay:.52s">
+                I keep learning and refining my craft—<strong>performance</strong>, <strong>a11y</strong>,
+                and <strong>clean architecture</strong>. My goal is to deliver work that meets requirements, provides
+                real value, and lasts.
+            </p>
+        </div>
+
+        <section class="center-stage">
+            <div class="swiper mySwiper reveal-right" style="--delay:.30s">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="images/1.jpg" alt="1"></div>
+                    <div class="swiper-slide"><img src="images/2.jpg" alt="2"></div>
+                    <div class="swiper-slide"><img src="images/3.jpg" alt="3"></div>
+                    <div class="swiper-slide"><img src="images/4.jpg" alt="4"></div>
+                    <div class="swiper-slide"><img src="images/5.jpg" alt="5"></div>
+                    <div class="swiper-slide"><img src="images/6.jpg" alt="6"></div>
+                    <div class="swiper-slide"><img src="images/7.jpg" alt="7"></div>
+                    <div class="swiper-slide"><img src="images/8.jpg" alt="8"></div>
+                    <div class="swiper-slide"><img src="images/9.jpg" alt="9"></div>
+                    <div class="swiper-slide"><img src="images/10.jpg" alt="10"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
     </section>
 
     <section id="projects" class="section">
@@ -75,6 +122,9 @@
     <footer>
         <p>&copy; 2025 Watcharapol</p>
     </footer>
+
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
